STYLE: Improve responsiveness with large screens by adding media query
This commit updates media queries for desktop screens to increment responsiveness and improve user experience.

Media query added:
- @media (min-width: 1250px) and (min-height: 856px)

--- a/homepage/templates/homepage/index.html
+++ b/homepage/templates/homepage/index.html
@@ -14,7 +14,7 @@
 <!-- index.html content starts here -->
 <div class="container-fluid">
     <div class="square-body row justify-content-center my-4"> <!-- Center the row horizontally -->
-        <div class="col-lg-6 col-md-8 mt-2">
+        <div class="squares-container col-lg-6 col-md-8 mt-2">
             <div class="row">
                 {% for topic in topic_list %}
                 <!-- Topic section -->
