--- a/static/css/style.css
+++ b/static/css/style.css
@@ -282,7 +282,16 @@ h1.hidden-heading {
   }
 }
 
-/* Media query for big screens */
+/* Media queries for big screens */
+
+@media (min-width: 1250px) and (min-height: 856px) {
+  /* Styles for the website body */
+  .squares-container {
+    max-width: 588px;
+    margin: auto;
+  }
+}
+
 @media (min-width: 4890px) and (min-height: 2942px) {
   /* Styles for the website body */
   .website-body {
