DOCS: Update documentations with testing results
This commit updates the Validator Testing section in TESTING.md with detailed testing results. HTML, CSS, JavaScript and Python testing are now completed and added to the documentation.

--- a/about_page/templates/about_page/about_page.html
+++ b/about_page/templates/about_page/about_page.html
@@ -11,9 +11,9 @@
             <header>
                 <h1>{{ about_page.title }}</h1>
             </header>
-            <section>
+            <div>
                 <p>{{ about_page.content | safe }}</p>
-            </section>
+            </div>
         </section>
         <div class="col-md-6 border border-4 mb-4 mx-4 card rounded-100">
             <!-- Form section -->
