--- a/homepage/templates/homepage/index.html
+++ b/homepage/templates/homepage/index.html
@@ -35,7 +35,7 @@
                                     {% endif %}
                                 </div>
                                 <!-- Topic title -->
-                                <h2 class="card-title">{{ topic.title }}</h2>
+                                <h2 class="card-title mt-2">{{ topic.title }}</h2>
                                 <!-- Topic short description -->
                                 <h3 class="card-text">{{ topic.description }}</h3>
                             </a>
