--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,9 @@
 <html class="h-100" lang="en">
 
 <head>
+    <!-- Set character encoding to UTF-8 -->
     <meta charset="UTF-8" />
+    <!-- Set X-UA-Compatible to IE=edge for better compatibility with Internet Explorer -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <!-- Meta tag to allow different devices to scale the content-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -20,9 +22,9 @@
 
     <!-- Meta tags for search engines -->
     <meta name="description"
-        content="Discover comprehensive social media resources on Narcissistic Personality Disorder, including expert insights, support communities, and practical tips. Explore now and empower yourself." />
+        content="Discover comprehensive social media resources on Narcissistic Personality Disorder, including expert insights, support communities, and practical tips. Explore now and empower yourself.">
     <meta name="keywords"
-        content="Narcissistic Personality Disorder, NPD, NPD resources, Personality disorders, Mental health support, Coping strategies, Therapy options, Online communities, Support groups, Understanding NPD, Self-help techniques, Psychological resources, Emotional resilience, Managing relationships, Self-care practices, Empowerment tools, Recovery journey, Awareness journey, Mental wellness tips, Peer support, Instagram reels, Reels, Abuse, Violence, Abusive behaviours, Violent behaviours" />
+        content="Narcissistic Personality Disorder, NPD, NPD resources, Personality disorders, Mental health support, Coping strategies, Therapy options, Online communities, Support groups, Understanding NPD, Self-help techniques, Psychological resources, Emotional resilience, Managing relationships, Self-care practices, Empowerment tools, Recovery journey, Awareness journey, Mental wellness tips, Peer support, Instagram reels, Reels, Abuse, Violence, Abusive behaviours, Violent behaviours">
 
     <!-- Title -->
     <title>Narcissism Personality Disorder: Social Resources</title>
