--- a/homepage/templates/homepage/topic_detail.html
+++ b/homepage/templates/homepage/topic_detail.html
@@ -107,7 +107,7 @@
                     <button id="submitButton" type="submit" class="btn btn-signup btn-lg">Submit</button>
                 </form>
                 {% else %}
-                <p><a href="{% url 'account_login' %}">Login</a> to access the comments section</p>
+                <p><a href="{% url 'account_login' %}" class= "purple-part">Login</a> to access the comments section</p>
                 {% endif %}
             </div>
         </section>
